Fix first laytou and change dark mode text

--- a/public/style.css
+++ b/public/style.css
@@ -63,7 +63,7 @@ body {
   opacity: 0;
   content: attr(data-text);
   display: block;
-  animation: fadeIn 2s ease-in forwards;
+  animation: fadeIn 0.2s ease-in forwards;
 }
 
 .switch-container {
@@ -199,7 +199,7 @@ body {
 }
 
 .container {
-  min-width: 50rem;
+  max-width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
